# ai-video-captioner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Guide.MD  README.md  pyproject.toml  requirements.txt
config/: models.yaml
data/: style_examples.py
docs/: captioner-slides.pptx  deck.md
scripts/: eval.py
src/captioner/: __init__.py  asr.py  cache.py  cli.py  client.py  comedy.py  config.py  harness.py  judge.py  pipeline.py  preprocess.py  styles.py  understand.py
tests/: smoke_offline.py
